tests/snapshots/run_wpt_conformance__trtx_elu_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float16 1D tensor default options",
    "trtx",
    "PASS",
)
