tests/snapshots/run_wpt_conformance__trtx_elu_float16_4D_tensor_positive_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float16 4D tensor positive options.alpha",
    "trtx",
    "PASS",
)
