tests/snapshots/run_wpt_conformance__trtx_elu_float16_positive_0D_scalar_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float16 positive 0D scalar default options",
    "trtx",
    "PASS",
)
